<resources>
    <string name="app_name">ArendVanDormalen-pset2</string>
    <string name="first_button">Let\'s Go!</string>
    <string name="gameExplanation">Welcome to MadLibs! I will ask you to fill in words to complete a story. You won\'t be able to see the whole story until you are done filling in all the missing words. That\'s part of the fun. Click below to get started…</string>
    <string name="fill_in_instructions">Fill in the words to complete the story:</string>
    <string name="front_page_pic_description">Mad Libs Guy</string>
    <string name="words_left">word(s) left</string>
    <string name="submit_word">OK</string>
    <string name="next_story_button">Make another story</string>
    <string name="warning_message">Please enter a word!</string>
</resources>
